--- a/database.properties
+++ b/database.properties
@@ -1,5 +1,5 @@
 # Connection properties for the database given to Tomcat and used by META-INF/context.xml
-database.user=sa
-database.password=
-database.driver=org.hsqldb.jdbcDriver
-database.url=jdbc:hsqldb:hsql://localhost/broadleaf
+database.user=broadleaf
+database.password=ecommerce
+database.driver=com.mysql.jdbc.Driver
+database.url=jdbc:mysql://localhost:3306/broadleaf?useUnicode=true&amp;characterEncoding=utf8&amp;useSSL=false
