--- a/admin/src/main/resources/runtime-properties/development.properties
+++ b/admin/src/main/resources/runtime-properties/development.properties
@@ -8,6 +8,7 @@
 
 exception.showDebugMessage=true
 
-blPU.hibernate.hbm2ddl.auto=create
+blPU.hibernate.hbm2ddl.auto=update
 blCMSStorage.hibernate.hbm2ddl.auto=update
 blSecurePU.hibernate.hbm2ddl.auto=update
+blEventPU.hibernate.hbm2ddl.auto=update
